# HelloQt

./: CMakeLists.txt  HelloQt.cpp  README.md  azure-pipelines.yml
